# ThreatLens

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: attack_mapping.md  scoring.md
sample_data/: benign_events.csv  high_risk_events.csv  mixed_events.csv
src/threatlens/: __init__.py  __main__.py  analyzer.py  features.py  main.py  mapper.py  model.py  parser.py  reporter.py  scorer.py  utils.py
tests/: conftest.py  test_features.py  test_integration.py  test_mapper.py  test_model.py  test_parser.py  test_placeholder.py  test_reporter.py  test_scorer.py
