[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatlens"
version = "0.1.0"
description = "AI-assisted threat prioritization engine for security event analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cybersecurity", "threat-intelligence", "security-events", "machine-learning", "soc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "rich>=13.0",
]

[project.scripts]
threatlens = "threatlens.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
